# metu-ceng-talk

./: Main.hs  README.md  metu-ceng.cabal
